feat: use cron scheduling for healthchecks

--- a/.env.non-secret
+++ b/.env.non-secret
@@ -1,3 +1,5 @@
+EXAMPLE_SERVICE_PORT=3001
+
 UP='{"url": "http://0.0.0.0:3001/_manage/health/up", "metadata": { "feature": "up-service", "team": "mine", "component": "testing", "datacenter": "local", "environment": "develop", "system": "personal" } }'
 DOWN='{ "url": "http://0.0.0.0:3001/_manage/health/down", "metadata": { "feature": "down-service", "team": "mine", "component": "testing", "datacenter": "local", "environment": "develop", "system": "personal"  } }'
 DEGRADED='{ "url": "http://0.0.0.0:3001/_manage/health/degraded", "metadata": { "feature": "degraded-service", "team": "mine", "component": "testing", "datacenter": "local", "environment": "develop", "system": "personal"  } }'
@@ -10,3 +12,9 @@ A10Y_HEALTH_CHECKS="[${DOWN},${UP},${DEGRADED},${OUT},${UNKNOWN},${BAD},${SERVER
 # A10Y_HEALTH_CHECKS="[${UP}]"
 
 OTEL_METRIC_READER_INTERVAL_SECS=5
+
+# THESE SHOULD BE SET IN .env.secret
+# GRAFANA_USERNAME_TEMPO=''
+# GRAFANA_API_KEY_TEMPO=''
+# GRAFANA_USERNAME_PROM=''
+# GRAFANA_API_KEY_PROM=''
