--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,3 +39,9 @@ hyper = "1.4.1"
 serde_json = "1.0.128"
 dotenv = "0.15.0"
 once_cell = "1.20.2"
+apalis = { version = "0.7.2", features = ["limit", "retry", "timeout", "tracing"] }
+apalis-cron = "0.7.2"
+chrono = "0.4.41"
+tower = "0.5.2"
+retry = "2.1.0"
+timeout = "0.1.0"
